# NetworkPulse

./: .gitignore  CMakeLists.txt  Kconfig  Makefile  README.md  sources.mk  variables.mk
doc/: index.md
doc/building/: index.md
doc/configuration/: index.md
include/: config.h  hostname.h  logger.h  os.h  table.h  version.h
src/: client.cpp  server.cpp
src/modules/: hostname.cpp  logger.cpp  table.cpp
tools/: build_cmake.sh
tools/config/: README.md  backup.h  defconfig.conf
tools/version/: set_version.c  set_version.py
